# hl_yaml

./: .gitignore  .ocamlformat  Dockerfile  LICENSE  README.md  dune-project  hl-yaml.opam  hl_yaml.opam
src/: dune  hl_yaml.ml  hl_yaml.mli  json_spec.ml  json_spec.mli  s.ml  spec.ml  spec.mli
test/: advanced.yml  dune  imported.yml  test_config.ml  test_eio.ml  test_json_spec.ml  test_lwt.ml  test_spec.ml  test_stdlib.ml  test_unix.ml  test_validate.ml  test_yaml.ml  utils.ml
test/files/: advanced.yml  data.json  people.yml  people_fixed.yml
